// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntitySchema denormalization can denormalize already partially denormalized data 1`] = `
Object {
  "food": Object {
    "id": 1,
  },
  "id": 1,
}
`;

exports[`EntitySchema denormalization denormalizes an entity 1`] = `
Object {
  "id": 1,
  "type": "foo",
}
`;

exports[`EntitySchema denormalization denormalizes deep entities 1`] = `
Object {
  "food": Object {
    "id": 1,
  },
  "id": 1,
}
`;

exports[`EntitySchema denormalization denormalizes deep entities 2`] = `
Object {
  "id": 2,
}
`;

exports[`EntitySchema denormalization denormalizes recursive dependencies 1`] = `
Object {
  "draftedBy": Object {
    "id": "456",
    "reports": Array [
      [Circular],
    ],
    "role": "manager",
  },
  "id": "123",
  "publishedBy": Object {
    "id": "456",
    "reports": Array [
      [Circular],
    ],
    "role": "manager",
  },
  "title": "Weekly report",
}
`;

exports[`EntitySchema denormalization denormalizes recursive dependencies 2`] = `
Object {
  "id": "456",
  "reports": Array [
    Object {
      "draftedBy": [Circular],
      "id": "123",
      "publishedBy": [Circular],
      "title": "Weekly report",
    },
  ],
  "role": "manager",
}
`;

exports[`EntitySchema denormalization denormalizes to undefined for missing data 1`] = `
Object {
  "food": undefined,
  "id": 1,
}
`;

exports[`EntitySchema denormalization denormalizes to undefined for missing data 2`] = `undefined`;
